# CursorHackaton

./: README.md  package-lock.json
backend/: README.md
backend/AI_agent/: .env.example  data.mjs  events.json  package-lock.json  package.json  server.mjs
backend/cursor_hakaton/: enrich_events_json.py  events.db  export_events_json.py  requirements.txt  scrape_to_db.py
backend/cursor_hakaton/zagreb_events/: BITNO.py  __init__.py  db.py  main.py  schemas.py
backend/nikola/: .gitignore  places_data.json  pyproject.toml
backend/nikola/app/: __init__.py  config_schema.py  db.py  handlers.py  main.py  places_client.py  places_parse.py  store.py
backend/nikola/app/services/: sync_places.py
backend/nikola/config/: places_queries.json  routes.json  secrets.example.json
backend/nikola/scripts/: install.sh  run.sh  test_api.py
front/: index.html  package-lock.json  package.json  vite.config.js
front/src/: App.jsx  index.css  zagreb-events.css
front/src/api/: recommend.js
front/src/components/: CategoryIcon.jsx  EventCard.jsx  FavoriteEventButton.jsx  Header.jsx  Hero.jsx  LeafletMap.jsx  LocationCard.jsx  MapSection.jsx  Newsletter.jsx  TabSwitcher.jsx
front/src/data/: content.js  data.js  eventsFromData.js  placesFromData.js  venueLocations.js
front/src/favorites/: FavoritesContext.jsx
front/src/i18n/: LanguageContext.jsx  translations.js
front/src/pages/: EventsPage.jsx  FavoritesPage.jsx  HomePage.jsx  LocationsPage.jsx  (+1 more)
frontend/: package-lock.json  package.json
presentation/: build_presentation.py  main.py  pyproject.toml
(+11 files in other folders)
