[project]
name = "presentation"
version = "0.1.0"
description = "Hackathon MVP PowerPoint generator (python-pptx)"
requires-python = ">=3.13"
dependencies = [
    "python-pptx>=1.0.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["build_presentation", "main"]
